# Museum-Project

./: .env  .gitignore  README.md  load_csv_files.py  main.py  project.sql  pyproject.toml
airflow/: Dockerfile  docker-compose.yaml  requirements.airflow.txt
airflow/config/: airflow.cfg  password.json  passwords.json
airflow/dags/: pipeline.py
configs/: README.md  connection.py
docs/: architecture.md  data_catlog.md  data_test.md  docker.md  incremental.md  star_schema.md
drivers/: README.md
museum_dbt/: .gitignore  dbt_project.yml
notebooks/: museum_bronze_eda.ipynb
reports/: abc.sql  qwer.sql  test.sql
scripts/: README.MD
scripts/Extraction/: backfill_timestamps.py  extract.py
scripts/Utils/: database_connection.py
scripts/extraction/: extract.py
sql/: 01_average_discount_by_era.sql  02_revenue_by_canvas_size.sql  03_museum_artwork_vs_hours.sql  04_above_median_by__nationalty.sql  05_unknown_subject_artwork.sql  06_weekend_museum_pricing.sql  07_canvas_size_distribution.sql  08_top_artist_by_revenue.sql  09_fct_sales_grain_audit.sql  10_canvas_bucket_boundary.sql  11_historical_vs_living.sql  12_city_museum.sql  13_discount_derivate.sql  14_multi_size_parsed.sql  15_coalesce_nulls_aduit.sql  16_canvas_boundary_revenue_impact.sql  17_missing_metadata_orphan_analysis.sql  18_museum_hours_artwork_correlation.sql  19_is_in_museum_audit_flag.sql  20_full_star_schema_strees_test.sql
utils/: README.md  engine.py  logger.py
watermark/: artist.json  canvas_size.json  museum.json  museum_hours.json  product_size.json  subject.json  work.json
(+37 files in other folders)
