[project]
name = "museum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.2.2",
    "apache-airflow-providers-docker>=4.5.7",
    "apache-airflow-providers-postgres>=6.7.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pymongo>=4.17.0",
    "pyspark>=4.1.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.2.2",
]
